--- a/src/app/components/news-section/news-section.component.html
+++ b/src/app/components/news-section/news-section.component.html
@@ -1,11 +1,13 @@
 <section class="news-section">
     <h2>📰 Últimas novedades</h2>
-    <div class="news-card" routerLink="/formulario-denuncia">
+    <div class="news-card">
         <img src="assets/img/noticia-denuncia.jpg" alt="Denuncia digital" />
         <div class="news-content">
             <h3>Nuevo sistema de denuncias digitales</h3>
             <p>Accedé al formulario online para realizar tu denuncia de forma segura y rápida.</p>
-            <button>Ir al formulario</button>
+            <button mat-stroked-button color="primary" routerLink="/app-form-one">
+                Ir al formulario
+            </button>
         </div>
     </div>
 </section>
