--- a/src/app/components/form-one/form-one.component.html
+++ b/src/app/components/form-one/form-one.component.html
@@ -75,8 +75,11 @@
             <div class="actions">
                 <!-- <button mat-stroked-button type="button" (click)="clear()">Limpiar</button> -->
                 <button mat-stroked-button type="button">Limpiar</button>
+                <button mat-flat-button color="primary" type="submit">Continuar</button>
+                <button mat-flat-button color="primary" type="button" [routerLink]="['/app-form-two']">
+                    Ir al formulario dos
+                </button>
 
-                <button mat-flat-button color="primary" type="submit">Enviar</button>
             </div>
         </form>
     </mat-card-content>
