--- a/src/app/components/form-three/form-three.component.html
+++ b/src/app/components/form-three/form-three.component.html
@@ -29,7 +29,7 @@
 
 
             <div class="actions">
-                <button mat-stroked-button type="button">Limpiar</button>
+                <button mat-stroked-button type="button" (click)="clear()">Limpiar</button>
                 <button mat-flat-button color="primary" type="submit">Enviar</button>
             </div>
         </form>
