--- a/src/app/components/form-two/form-two.component.html
+++ b/src/app/components/form-two/form-two.component.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="actions">
-                <button mat-stroked-button type="button">Limpiar</button>
+                <button mat-stroked-button type="button" (click)="clear()">Limpiar</button>
                 <button mat-flat-button color="primary" type="submit">Enviar</button>
                 <button mat-flat-button color="primary" type="button" [routerLink]="['/app-form-three']">
                     Ir al formulario tres
